src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithResourceIcon/ValidWithResourceIcon.php
<?php

namespace Valid\WithResourceIcon;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithResourceIcon extends PluginBundle
{
}