src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/NonConventionalFQCN1/AdditionalNamespaceSegment/InvalidNonConventionalFQCN1.php
<?php

namespace Invalid\NonConventionalFQCN1\AdditionalNamespaceSegment;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidNonConventionalFQCN1 extends PluginBundle
{
    /**
     * Invalid because it adds an extra segment to the FQCN convention.
     */
}